v0.13.1/_sources/_generated/groups/users.rst.txt
.. role:: action-argument-required

Users
=====

This section details User-related Linode CLI commands.

.. _commands_users_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-users>`_
--------------------------------------------------------------------


Returns a paginated list of all users on your account.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli users list [-h] [--username username]
    	[--order-by {username}] [--order {asc,desc}]


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli users list


.. cssclass:: action-subheading

    .. rubric:: Filterable Attributes


.. cssclass:: action-subheading-description

    Arguments used to define a filter for response entries.


.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`--username`
      - *string*
      - The User's username.


------------

.. _commands_users_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-user>`_
-------------------------------------------------------------------


Returns information about a single user on your account.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli users view [-h] [--username username]
    	[--order-by {username}] [--order {asc,desc}] username


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli users view example_user


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`username`
      - string
      - The username to look up.


------------

.. _commands_users_create:

`create <https://techdocs.akamai.com/linode-api/reference/post-user>`_
----------------------------------------------------------------------


Creates a user on your account.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli users create [-h] [--username username]
    	[--restricted restricted] [--email email]


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli users create \
    	--username example_user \
    	--email example_user@linode.com \
    	--restricted true


.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--email`
      - :action-argument-required:`Yes`
      - string
      - The email address for the User.
    * - :code:`--username`
      - :action-argument-required:`Yes`
      - string
      - The User's username.
    * - :code:`--last_login`
      - No
      - object
      - Information for the most recent login attempt for this User.
    * - :code:`--password_created`
      - No
      - string
      - The date and time when this User's current password was created.
    * - :code:`--restricted`
      - No
      - boolean
      - If true, the User must be granted access to perform actions or access entities on this Account.
    * - :code:`--ssh_keys`
      - No
      - array[string]
      - A list of SSH Key labels added by this User.
    * - :code:`--tfa_enabled`
      - No
      - boolean
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.
    * - :code:`--verified_phone_number`
      - No
      - string
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.


------------

.. _commands_users_update:

`update <https://techdocs.akamai.com/linode-api/reference/put-user>`_
---------------------------------------------------------------------


Update information about a user on your account, including its restricted status.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli users update [-h] [--restricted restricted]
    	[--email email] [--username username] username


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli users update example_user \
    	--username example_user \
    	--email example@linode.com \
    	--restricted true


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`username`
      - string
      - The username to look up.

.. cssclass:: action-subheading

    .. rubric:: Arguments

.. cssclass:: action-subheading-description

    Additional fields used to execute this request.


.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 10 10 79

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--email`
      - No
      - string
      - The email address for the User.
    * - :code:`--last_login`
      - No
      - object
      - Information for the most recent login attempt for this User.
    * - :code:`--password_created`
      - No
      - string
      - The date and time when this User's current password was created.
    * - :code:`--restricted`
      - No
      - boolean
      - If true, the User must be granted access to perform actions or access entities on this Account.
    * - :code:`--ssh_keys`
      - No
      - array[string]
      - A list of SSH Key labels added by this User.
    * - :code:`--tfa_enabled`
      - No
      - boolean
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.
    * - :code:`--username`
      - No
      - string
      - The User's username.
    * - :code:`--verified_phone_number`
      - No
      - string
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.



.. _commands_users_delete:

`delete <https://techdocs.akamai.com/linode-api/reference/delete-user>`_
------------------------------------------------------------------------


Deletes a user.

.. cssclass:: action-subheading

    .. rubric:: Usage


.. cssclass:: action-subheading-description

    The format accepted by this command.

..  code-block:: bash

    linode-cli users delete [-h] username


.. cssclass:: action-subheading

    .. rubric:: Sample

.. cssclass:: action-subheading-description

    Examples of how this command might be used.


..  code-block:: bash

    linode-cli users delete example_user


.. cssclass:: action-subheading

    .. rubric:: Parameters

.. cssclass:: action-subheading-description

    Positional parameters used to define the resource this command should target.


.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`username`
      - string
      - The username to look up.



